# ListenWise

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.docker  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: bbe11390d184_initial_tables.py
backend/app/: celery_app.py  config.py  database.py  main.py  sync_db.py
backend/app/api/: export.py  recordings.py  search.py
backend/app/models/: __init__.py  base.py  document.py  folder.py  recording.py  tag.py  transcript.py  user.py
backend/app/schemas/: recording.py  search.py
backend/app/services/: asr.py  export.py  llm.py  storage.py  templates.py
backend/app/tasks/: __init__.py  generate_doc.py  transcribe.py
docs/plans/: 2026-02-28-listenwise-brainstorming-log.md  2026-02-28-listenwise-design-system.md  2026-02-28-listenwise-design.md  2026-02-28-listenwise-frontend-style.md  2026-02-28-listenwise-implementation.md  2026-02-28-listenwise-prd.md  2026-03-01-dev-log.md
docs/prototypes/: wireframes.html
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: AudioPlayer.tsx  DocumentPanel.tsx  EmptyState.tsx  FileUploader.tsx  FolderSidebar.tsx  FolderView.tsx  Navbar.tsx  ProcessingList.tsx  RecentRecordings.tsx  SceneSelector.tsx  StatsCards.tsx  TimelineView.tsx  TranscriptPanel.tsx  WebRecorder.tsx
frontend/src/lib/: api.ts
(+1 files in other folders)
